// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Email templates — snapshot per non-regressione > approvazione 1`] = `"Il tuo account FoodOS è attivo! ✅"`;

exports[`Email templates — snapshot per non-regressione > approvazione 2`] = `
"
    <div style="font-family:system-ui,sans-serif;max-width:560px;margin:0 auto;padding:32px 24px;background:#FDFAF7;">
      <h1 style="color:#1C0A0A;font-size:24px;margin:0 0 8px;">Account attivato! 🎉</h1>
      <p style="color:#6B4C44;font-size:15px;line-height:1.7;margin:0 0 20px;">
        Ciao Mara Rossi,<br>
        il tuo account per <strong>Mara dei Boschi SRL</strong> è stato attivato.
      </p>
      <a href="https://foodios.it"
         style="display:inline-block;padding:12px 28px;background:#C0392B;color:#FFF;
                border-radius:8px;font-weight:700;text-decoration:none;font-size:14px;">
        Vai alla dashboard →
      </a>
      <hr style="border:none;border-top:1px solid #E8DDD8;margin:24px 0;">
      <p style="color:#9C7B76;font-size:12px;">
        Notifica automatica FoodOS · scrivici a
        <a href="mailto:support@foodios.it" style="color:#C0392B;">support@foodios.it</a>
      </p>
    </div>"
`;

exports[`Email templates — snapshot per non-regressione > benvenuto 1`] = `"Benvenuto in FoodOS — la tua prova gratuita è iniziata 🍰"`;

exports[`Email templates — snapshot per non-regressione > benvenuto 2`] = `
"
    <div style="font-family:system-ui,sans-serif;max-width:560px;margin:0 auto;padding:32px 24px;background:#FDFAF7;">
      <h1 style="color:#1C0A0A;font-size:24px;margin:0 0 8px;">Benvenuto in FoodOS! 🎉</h1>
      <p style="color:#6B4C44;font-size:15px;line-height:1.7;margin:0 0 20px;">
        La tua attività <strong>Pasticceria Mara dei Boschi</strong> è stata registrata con successo.<br>
        Hai <strong>3 mesi gratuiti</strong> per esplorare tutte le funzionalità —
        nessuna carta di credito richiesta.
      </p>
      <p style="color:#6B4C44;font-size:14px;line-height:1.7;">
        Ti contatteremo entro 24 ore per attivare il tuo account.
      </p>
      <hr style="border:none;border-top:1px solid #E8DDD8;margin:24px 0;">
      <p style="color:#9C7B76;font-size:12px;">
        Notifica automatica FoodOS · scrivici a
        <a href="mailto:support@foodios.it" style="color:#C0392B;">support@foodios.it</a>
      </p>
    </div>"
`;

exports[`Email templates — snapshot per non-regressione > magazzino_sotto_soglia — lista 3 ingredienti 1`] = `
"
    <div style="font-family:system-ui,sans-serif;max-width:560px;margin:0 auto;padding:32px 24px;background:#FDFAF7;">
      <h1 style="color:#1C0A0A;font-size:22px;margin:0 0 8px;">Scorte sotto soglia 📦</h1>
      <p style="color:#6B4C44;font-size:15px;line-height:1.7;margin:0 0 20px;">
        <strong>Mara dei Boschi</strong> ha 3 ingredienti da riordinare:
      </p>
      <table style="width:100%;border-collapse:collapse;background:#FFF;border:1px solid #E8DDD8;border-radius:8px;overflow:hidden;">
        <thead><tr style="background:#F5EDE8;">
          <th style="padding:8px 12px;text-align:left;font-size:11px;color:#9C7B76;text-transform:uppercase;">Ingrediente</th>
          <th style="padding:8px 12px;text-align:right;font-size:11px;color:#9C7B76;text-transform:uppercase;">Giacenza</th>
          <th style="padding:8px 12px;text-align:right;font-size:11px;color:#9C7B76;text-transform:uppercase;">Soglia</th>
        </tr></thead>
        <tbody>
    <tr>
      <td style="padding:8px 12px;border-bottom:1px solid #E8DDD8;color:#1C0A0A;font-size:14px;">Farina 00 <span style="color:#9C7B76;">(Torino)</span></td>
      <td style="padding:8px 12px;border-bottom:1px solid #E8DDD8;color:#C0392B;font-size:14px;font-weight:700;text-align:right;">2 kg</td>
      <td style="padding:8px 12px;border-bottom:1px solid #E8DDD8;color:#6B4C44;font-size:14px;text-align:right;">10 kg</td>
    </tr>
    <tr>
      <td style="padding:8px 12px;border-bottom:1px solid #E8DDD8;color:#1C0A0A;font-size:14px;">Zucchero</td>
      <td style="padding:8px 12px;border-bottom:1px solid #E8DDD8;color:#C0392B;font-size:14px;font-weight:700;text-align:right;">500 g</td>
      <td style="padding:8px 12px;border-bottom:1px solid #E8DDD8;color:#6B4C44;font-size:14px;text-align:right;">3 kg</td>
    </tr>
    <tr>
      <td style="padding:8px 12px;border-bottom:1px solid #E8DDD8;color:#1C0A0A;font-size:14px;">Burro <span style="color:#9C7B76;">(Lab)</span></td>
      <td style="padding:8px 12px;border-bottom:1px solid #E8DDD8;color:#C0392B;font-size:14px;font-weight:700;text-align:right;">0 kg</td>
      <td style="padding:8px 12px;border-bottom:1px solid #E8DDD8;color:#6B4C44;font-size:14px;text-align:right;">5 kg</td>
    </tr></tbody>
      </table>
      <hr style="border:none;border-top:1px solid #E8DDD8;margin:24px 0;">
      <p style="color:#9C7B76;font-size:12px;">
        Notifica automatica FoodOS · scrivici a
        <a href="mailto:support@foodios.it" style="color:#C0392B;">support@foodios.it</a>
      </p>
    </div>"
`;

exports[`Email templates — snapshot per non-regressione > report_mensile — completo 1`] = `
"
    <div style="font-family:system-ui,sans-serif;max-width:560px;margin:0 auto;padding:32px 24px;background:#FDFAF7;">
      <h1 style="color:#1C0A0A;font-size:22px;margin:0 0 8px;">Report di giugno 2026</h1>
      <p style="color:#6B4C44;font-size:15px;line-height:1.7;margin:0 0 20px;">
        Ecco il riepilogo del mese per <strong>Mara</strong>:
      </p>
      <div style="display:flex;gap:10px;margin-bottom:14px;">
        
    <div style="flex:1;background:#FFF;border:1px solid #E8DDD8;border-radius:8px;padding:14px 16px;">
      <div style="font-size:11px;color:#9C7B76;text-transform:uppercase;letter-spacing:0.06em;margin-bottom:4px;">Ricavi</div>
      <div style="font-size:18px;font-weight:800;color:#1C0A0A;">€ 12.345,67</div>
    </div>
        
    <div style="flex:1;background:#FFF;border:1px solid #E8DDD8;border-radius:8px;padding:14px 16px;">
      <div style="font-size:11px;color:#9C7B76;text-transform:uppercase;letter-spacing:0.06em;margin-bottom:4px;">Food cost medio</div>
      <div style="font-size:18px;font-weight:800;color:#1C0A0A;">28.5%</div>
    </div>
      </div>
      <p style="color:#6B4C44;font-size:14px;line-height:1.7;margin:0 0 6px;">🥇 Più venduto: <strong>Torta Sacher</strong></p>
      <p style="color:#6B4C44;font-size:14px;line-height:1.7;margin:0;">🐢 Meno venduto: <strong>Bignè crema</strong></p>
      <hr style="border:none;border-top:1px solid #E8DDD8;margin:24px 0;">
      <p style="color:#9C7B76;font-size:12px;">
        Notifica automatica FoodOS · scrivici a
        <a href="mailto:support@foodios.it" style="color:#C0392B;">support@foodios.it</a>
      </p>
    </div>"
`;

exports[`Email templates — snapshot per non-regressione > scadenza_trial 1`] = `"La tua prova FoodOS scade tra 7 giorni ⏰"`;

exports[`Email templates — snapshot per non-regressione > scadenza_trial 2`] = `
"
    <div style="font-family:system-ui,sans-serif;max-width:560px;margin:0 auto;padding:32px 24px;background:#FDFAF7;">
      <h1 style="color:#1C0A0A;font-size:24px;margin:0 0 8px;">La tua prova sta per scadere</h1>
      <p style="color:#6B4C44;font-size:15px;line-height:1.7;margin:0 0 20px;">
        La tua prova gratuita di FoodOS scade tra <strong>7 giorni</strong>.<br>
        I tuoi dati saranno conservati, ma non potrai accedervi senza un abbonamento attivo.
      </p>
      <a href="mailto:support@foodios.it?subject=Attivazione%20abbonamento%20FoodOS"
         style="display:inline-block;padding:12px 28px;background:#C0392B;color:#FFF;
                border-radius:8px;font-weight:700;text-decoration:none;font-size:14px;">
        Attiva ora →
      </a>
      <hr style="border:none;border-top:1px solid #E8DDD8;margin:24px 0;">
      <p style="color:#9C7B76;font-size:12px;">
        Notifica automatica FoodOS · scrivici a
        <a href="mailto:support@foodios.it" style="color:#C0392B;">support@foodios.it</a>
      </p>
    </div>"
`;
